# aiassistant

./: .gitignore  =6.0.0  Dockerfile  IMPL_PLAN.md  README.md  demo.html  docker-compose.yaml  example.env  pyproject.toml  sync_notes_host.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/adapters/: calendar.py  email.py  notes.py
backend/app/models/: __init__.py  alerted_event.py  conversation.py  email_summary.py  fact.py  held_notification.py  item_triage.py  llm_budget_config.py  llm_usage.py  notification_log.py  notification_rule.py  quiet_hours.py  scan_state.py  source_item.py
backend/app/notifications/: imessage.py  slack.py
backend/app/routers/: admin.py  chat.py  memory.py  notifications.py  sources.py
backend/app/services/: action_commands.py  admin.py  calendar_alerter.py  chat_pipeline.py  conversation.py  cross_source.py  daily_digest.py  email_summarizer.py  embedding.py  health_monitor.py  http_client.py  llm.py  llm_rate_limiter.py  memory.py  quiet_hours.py  quiet_hours_flusher.py  rag.py  rules_engine.py  scanner.py  slack_bot.py  triage_service.py  vectorstore.py
backend/tests/: test_admin.py  test_auth.py  test_calendar_adapter.py  test_calendar_alerter.py  test_chat.py  test_daily_digest.py  test_email_adapter.py  test_health.py  test_health_monitor.py  test_imessage.py  test_incremental_sync.py  test_memory.py  test_models.py  test_notes_adapter.py  test_rules_engine.py  test_scanner.py  test_slack.py  test_vectorstore.py
frontend/: Caddyfile  Dockerfile  package-lock.json
frontend/src/: App.tsx
(+15 files in other folders)
