[project]
name = "aiassistant"
version = "0.1.0"
description = "Personal AI assistant with persistent memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "chromadb>=0.6.0",
    "python-dotenv>=1.0.0",
    "caldav>=1.4.0",
    "icalendar>=6.0.0",
    "imapclient>=3.0.0",
    "python-dateutil>=2.9.0",
    "slack-bolt>=1.21.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
